Main classes: Improved code quality by integrating the use of ArgumentMultimap. Test classes: Altered test cases to cater to the change.